--- a/package.json
+++ b/package.json
@@ -9,15 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
-    "expo": "~52.0.46",
+    "exo-cli": "^1.0.0",
+    "expo": "^52.0.46",
     "expo-font": "^13.0.4",
     "expo-status-bar": "~2.0.1",
+    "node": "^22.15.0",
     "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native": "~0.77.1",
+    "react-native-gesture-handler": "~2.22.0",
+    "react-native-gifted-chat": "^2.8.1",
+    "react-native-keyboard-controller": "^1.17.1",
+    "react-native-reanimated": "~3.16.7",
+    "react-native-safe-area-context": "~5.1.0",
+    "react-native-screens": "~4.8.0",
+    "react-native-webview": "~13.13.1"
+  },
+  "expo": {
+    "install": {
+      "exclude": [
+        "react-native@~0.76.6",
+        "react-native-reanimated@~3.16.1",
+        "react-native-gesture-handler@~2.20.0",
+        "react-native-screens@~4.4.0",
+        "react-native-safe-area-context@~4.12.0",
+        "react-native-webview@~13.12.5"
+      ]
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
