--- a/app.json
+++ b/app.json
@@ -19,10 +19,17 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.dizzypete.chat"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "f81769bf-c325-400c-8a3f-47aac286e3f7"
+      }
+    },
+    "owner": "dizzypete"
   }
 }
