--- a/package.json
+++ b/package.json
@@ -4,18 +4,28 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.10",
-    "expo": "~52.0.46",
-    "expo-font": "^13.0.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-navigation/native": "^7.0.19",
+    "@react-navigation/native-stack": "^7.3.3",
+    "babel-preset-expo": "^12.0.11",
+    "expo": "~52.0.41",
+    "expo-dev-client": "~5.0.20",
+    "expo-image-picker": "^16.0.6",
+    "expo-location": "^18.0.10",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.6.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-gifted-chat": "^2.8.1",
+    "react-native-keyboard-controller": "^1.16.8",
+    "react-native-maps": "1.18.0",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0"
   },
