--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
     "@expo/ngrok": "^4.1.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
@@ -16,8 +17,10 @@
     "expo": "^52.0.46",
     "expo-font": "^13.0.4",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^10.14.1",
     "node": "^22.15.0",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "~0.77.1",
     "react-native-gesture-handler": "~2.22.0",
     "react-native-gifted-chat": "^2.8.1",
@@ -25,7 +28,9 @@
     "react-native-reanimated": "~3.16.7",
     "react-native-safe-area-context": "~5.1.0",
     "react-native-screens": "~4.8.0",
-    "react-native-webview": "~13.13.1"
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "~13.13.1",
+    "@react-native-masked-view/masked-view": "0.3.2"
   },
   "expo": {
     "install": {
