--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,7 +15,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "exo-cli": "^1.0.0",
     "expo": "^52.0.46",
-    "expo-font": "^13.0.4",
+    "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
     "firebase": "^10.14.1",
     "node": "^22.15.0",
