--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@expo/ngrok": "^4.1.0",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "exo-cli": "^1.0.0",
     "expo": "^52.0.46",
+    "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
     "firebase": "^10.14.1",
@@ -29,8 +31,7 @@
     "react-native-safe-area-context": "~5.1.0",
     "react-native-screens": "~4.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "~13.13.1",
-    "@react-native-masked-view/masked-view": "0.3.2"
+    "react-native-webview": "~13.13.1"
   },
   "expo": {
     "install": {
