--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "expo": "^52.0.46",
     "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.4",
+    "expo-image-picker": "^16.1.4",
+    "expo-location": "^18.1.5",
     "expo-status-bar": "~2.0.1",
     "firebase": "^10.14.1",
     "node": "^22.15.0",
@@ -29,6 +31,7 @@
     "react-native-gesture-handler": "~2.22.0",
     "react-native-gifted-chat": "^2.8.1",
     "react-native-keyboard-controller": "^1.17.1",
+    "react-native-maps": "^1.24.3",
     "react-native-reanimated": "~3.16.7",
     "react-native-safe-area-context": "~5.1.0",
     "react-native-screens": "~4.8.0",
