--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@expo/ngrok": "^4.1.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/native": "^7.1.6",
@@ -20,18 +20,18 @@
     "expo": "^52.0.46",
     "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.4",
-    "expo-image-picker": "^16.1.4",
-    "expo-location": "^18.1.5",
+    "expo-image-picker": "~16.0.6",
+    "expo-location": "~18.0.10",
     "expo-status-bar": "~2.0.1",
     "firebase": "^10.14.1",
     "node": "^22.15.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "~0.77.1",
+    "react-native": "^0.76.9",
     "react-native-gesture-handler": "~2.22.0",
     "react-native-gifted-chat": "^2.8.1",
     "react-native-keyboard-controller": "^1.17.1",
-    "react-native-maps": "^1.24.3",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.7",
     "react-native-safe-area-context": "~5.1.0",
     "react-native-screens": "~4.8.0",
