--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -24,11 +25,12 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.dizzypete.chat",
       "config": {
         "googleMaps": {
           "apiKey": "AIzaSyBz7xm3lSw_s78yBpKQylMBvG9HdSemgG4"
         }
+      },
+      "package": "com.dizzypete.chat"
     },
     "web": {
       "favicon": "./assets/favicon.png"
